--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,4 @@ jobs:
         server: ${{ secrets.FTP_HOST }}
         username: ${{ secrets.FTP_LOGIN }}
         password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: /public_html
+        server-dir: /public_html/
